--- a/src/html/index.html
+++ b/src/html/index.html
@@ -30,14 +30,26 @@
 			<div class="row">
 
 				<!-- COL OPTIONS -->
-				<div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
-					<h2>Options</h2>
-					<div class="panel panel-default">
+				<div class="col-xs-12 col-sm-6 col-md-6 col-lg-6 options">
+					<h2 class="options__header">Options</h2>
+					<div class="panel panel-default options__panel">
 						<div class="panel-body">
-							<h3>Border-radius:</h3>
-							<div id="slider-bradius"></div>
-							<h3>Font-Size:</h3>
-							<div id="slider-fsize"></div>
+							<div class="option--slider">
+								<h3>Border-radius:</h3>
+								<div id="slider-bradius"></div>
+							</div>
+							<div class="option--slider">
+								<h3>Border-size:</h3>
+								<div id="slider-bsize"></div>
+							</div>
+							<div class="option--slider">
+								<h3>Font-Size: </h3>
+								<div id="slider-fsize"></div>
+							</div>
+							<div class="option--text">
+								<h3>Button text:</h3>
+								<input type="text" id="btn_text" class="form-control" value="button" title="Text for your button" />
+							</div>
 						</div>
 					</div>
 				</div>
@@ -47,7 +59,7 @@
 					<h2>Result</h2>
 					<div class="panel panel-default">
 						<div class="panel-body">
-							<button id="demo-btn" type="button" class="btn btn-default">button</button>
+							<button id="demo-btn" type="button" class="button">button</button>
 						</div>
 					</div>
 				</div>
