Start writing send.php

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -81,7 +81,7 @@
 
 				<!-- COL FORM -->
 				<div class="col-xs-12 col-sm-12 col-md-8 col-lg-8 col-md-offset-2 col-lg-offset-2">
-					<form action="" class="" method="get" accept-charset="utf-8">
+					<form action="/php/send.php" class="" method="post" accept-charset="utf-8">
 						
 						<h2 class="section__header results__header">Result</h2>
 
